# src/models/timestamp.model.ts
@@ -1,9 +1,0 @@
-export class Timestamp {
-	constructor(partial: Partial<Timestamp>) {
-		Object.assign(this, partial)
-	}
-
-	createdAt?: NativeDate
-
-	updatedAt?: NativeDate
-}
